# exgi

./: .gitignore  Cargo.toml  README.md  install.sh
src/: cli.rs  common.rs  info.rs  init.rs  main.rs  top.rs
